kubernets_yaml/service/svc-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: cluster-service-test
  namespace: default
spec:
  selector:
    pod-name: pppp
  # clusterIP: 10.99.211.201 # 手动指定service的ip
  # clusterIP: None  # 不给service分配IP,(无头服务，配合statefulset使用)
  type: ClusterIP
  ports:   # - name 可以设置多个端口转发
  - name: nginx
    protocol: TCP
    port: 8888     # service可以被访问的端口，可以不设置宿主机端口，默认随机分配一个
    targetPort: 80   # pod被service访问的端口
  - name: redis
    protocol: TCP
    port: 9999     # service可以被访问的端口
    targetPort: 6379   # pod被service访问的端口
    # nodePort:   # type为NodePort 时使用端口在30000-32767
