kubernets_yaml/service/svc-ingress-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: cluster-ingress-1
  namespace: default
spec:
  selector:
    app: cluster-ingress-1
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: cluster-ingress-1
    protocol: TCP
    port: 80
    targetPort: 80 

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  cluster-ingress-deploy-1
  namespace: default
  labels:
    app:  cluster-ingress-1
spec:
  selector:
    matchLabels:
      app: cluster-ingress-1
  replicas: 1
  template:
    metadata:
      labels:
        app:  cluster-ingress-1
    spec:
      containers:
      - name:  cluster-ingress-deploy-1
        image:  nginx
        imagePullPolicy: IfNotPresent 



---
apiVersion: v1
kind: Service
metadata:
  name: cluster-ingress-2
  namespace: default
spec:
  selector:
    app: cluster-ingress-2
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: cluster-ingress-2
    protocol: TCP
    port: 80
    targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  cluster-ingress-deploy-2
  namespace: default
  labels:
    app:  cluster-ingress-2
spec:
  selector:
    matchLabels:
      app: cluster-ingress-2
  replicas: 1
  template:
    metadata:
      labels:
        app:  cluster-ingress-2
    spec:
      containers:
      - name:  cluster-ingress-deploy-2
        image:  tomcat
        imagePullPolicy: IfNotPresent
